--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "profile-guard-adder",
+  "name": "facebook-profile-guard",
   "version": "1.0.0",
+  "description": "A web app that allows users to enable Profile Guard on Facebook after logging in",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
+    "axios": "^0.24.0",
     "express": "^4.17.1",
-    "puppeteer": "^10.0.0"
-  }
+    "express-session": "^1.17.2",
+    "passport": "^0.5.0",
+    "passport-facebook": "^3.0.0",
+    "dotenv": "^10.0.0",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "author": "Aayusha",
+  "license": "MIT"
 }
